network-policies/network-policy-9200.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: indexer-rest-net-policy-allow-indexer
  namespace: wazuh
spec:
  podSelector:
    matchLabels:
      app: wazuh-indexer
  ingress:
    ### For the main purpose you don't need to expose your Opensearch
    ### But if you have a third party tool who need to reach opensearch, adapt this conf
    - from:
        - podSelector:
            matchLabels:
              app: wazuh-manager
      ports:
        - port: 9200
          protocol: TCP
    - from:
        - podSelector:
            matchLabels:
              app: wazuh-worker
      ports:
        - port: 9200
          protocol: TCP
    - from:
        - podSelector:
            matchLabels:
              app: wazuh-dashboard
      ports:
        - port: 9200
          protocol: TCP
    # - from:
    #     - ipBlock:
    #         cidr: 0.0.0.0/0
    #   ports:
    #     - port: 9200
    #       protocol: TCP
